package model.fighting;

public enum SkillList {

    DIVINE_HEAL
}
